Adding mac support for Remoting host GN builds.

BUG=611859

R=sergeyu@chromium.org

Committed: https://crrev.com/17265bc49734a8d9d19e60ae2facb2934c57f424 [formerly e55f21958be24503dd0390d93e999c0a23f724c5]
Review-Url: https://codereview.chromium.org/2034513002
Cr-Original-Commit-Position: refs/heads/master@{#399731}
Cr-Commit-Position: refs/heads/master@{#399957}

Former-commit-id: e6fb262ca88b0a3bc10ba7deb8a03e1d3acbf355